--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,13 @@
 /build
 
 # misc
+/examples.js
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 /.vscode
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
